--- a/src/bib/mybib.bib
+++ b/src/bib/mybib.bib
@@ -245,3 +245,17 @@ keywords = {MBSE, SysML, verification, model checking},
 location = {Virtual Event, Canada},
 series = {MODELS '20}
 }
+
+@article{REISIG19911,
+title = {Petri nets and algebraic specifications},
+journal = {Theoretical Computer Science},
+volume = {80},
+number = {1},
+pages = {1-34},
+year = {1991},
+issn = {0304-3975},
+doi = {https://doi.org/10.1016/0304-3975(91)90203-E},
+url = {https://www.sciencedirect.com/science/article/pii/030439759190203E},
+author = {Wolfgang Reisig},
+abstract = {Petri nets gain a great deal of modelling power by representing dynamically changing items as structured tokens (instead of “black dots”). Algebraic specifications turned out adequate for dealing with structured items. We will use this formalism to construct Petri nets with structured tokens. Place- and transition-invariants are useful analysis techniques for conventional Petri nets. We derive corresponding formalisms for nets with structured tokens, based on term substitution.}
+}
