--- a/src/content/activity-language/design-decisions.tex
+++ b/src/content/activity-language/design-decisions.tex
@@ -2,7 +2,7 @@
 \section{Language Design}
 %----------------------------------------------------------------------------
 
-The purpose of the Gamma Activity Language is the following: it should support as many features from SysML activity diagrams as possible, while also being simple to implement and transform to low-level models. \todo{Ezt a részt át kéne írni} As you could see from the \autoref{ssec:activities-as-petri-nets}, SysML activity diagrams cannot be exactly transformed to a formal model; we have to constrain our language in order to offer formal semantics. However, as you will see, these constrains still allow us to write \emph{almost} all activities.
+The purpose of the Gamma Activity Language is the following: it should support as many features from SysML activity diagrams as possible, while also being simple to implement and transform to low-level models. \todo{Ezt a részt át kéne írni} As you could see from the \autoref{ssec:activities-as-petri-nets}, SysML activity diagrams cannot be exactly transformed to a formal model; we have to constrain our language in order to offer formal semantics. However, as you will see, these constraints still allow us to write \emph{almost} all activities.
 
 \subsection{Constraints}
 
