--- a/src/content/activity-language/dsl.tex
+++ b/src/content/activity-language/dsl.tex
@@ -1,5 +1,5 @@
 %----------------------------------------------------------------------------
-\clearpage\section{Language Gramar}
+\clearpage\section{Language Gramar}\label{sec:activity-grammar}
 %----------------------------------------------------------------------------
 
 Similarly to the Gamma Statechart Language, the Gamma Activity Language is intended to be a first-class citizen in the Gamma Framework, thus it must have a grammar to represent in a textual way. This implementation incorporates elements from the SysMLv2 \cite{omg_sysml_v2} language design, while also fitting into the already existing language family of Gamma (\autoref{sec:gamma}).
