--- a/src/content/background/engineering-models.tex
+++ b/src/content/background/engineering-models.tex
@@ -2,9 +2,9 @@
 \section{Model-based Systems Engineering}\label{sec:mbse}
 %----------------------------------------------------------------------------
 
-The INCOSE SE Vision 2020 \cite{incose-systems-engineering-2020} defines Model-based systems engineering (MBSE) as:
+The INCOSE SE Vision 2020 defines Model-based systems engineering (MBSE) as:
 
-\blockquote{the formalized application of modeling to support system requirements, design, analysis, verification and validation activities beginning in the conceptual design phase and continuing throughout development and later life cycle phases. MBSE is part of a long-term trend toward model-centric approaches adopted by other engineering disciplines, including mechanical, electrical and software. In particular, MBSE is expected to replace the document-centric approach that has been practiced by systems engineers in the past and to influence the future practice of systems engineering by being fully integrated into the definition of systems engineering processes.}
+\blockquote{the formalized application of modeling to support system requirements, design, analysis, verification and validation activities beginning in the conceptual design phase and continuing throughout development and later life cycle phases. MBSE is part of a long-term trend toward model-centric approaches adopted by other engineering disciplines, including mechanical, electrical and software. In particular, MBSE is expected to replace the document-centric approach that has been practiced by systems engineers in the past and to influence the future practice of systems engineering by being fully integrated into the definition of systems engineering processes. \cite{incose-systems-engineering-2020}}
 
 Applying MBSE is expected to provide significant benefits over the document centric approach by enhancing productivity and quality, reducing risk, and providing improved communications among the system development team \cite{omgwiki}.
 
